<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="@drawable/bg_dialog_contact_us">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_contact_us"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextMainGrey"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_search"
            android:hint="@string/text_your_name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_search"
            android:hint="@string/text_your_email"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_search"
            >
            <EditText
                android:id="@+id/edit_msg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/text_your_msg"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="15sp"
                android:background="@null"
                android:textColor="@color/white"/>
        </ScrollView>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn_start"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/text_send"
            android:textSize="19sp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_start"
            android:backgroundTint="@color/colorGrey"
            android:text="@string/text_cancel"
            android:textSize="19sp"
            android:textColor="@color/colorTextMainGrey"/>

    </LinearLayout>


</RelativeLayout>