<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_start"
    tools:context=".activity.FirstActivity">

    <FrameLayout
        android:id="@+id/frame_native_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textStart"
            android:background="@drawable/bg_btn_start"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textShare"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn_start"
            android:backgroundTint="@color/colorGrey"
            android:textColor="@color/colorTextMainGrey"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textRate"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_btn_start"
            android:backgroundTint="@color/colorGrey"
            android:textColor="@color/colorTextMainGrey"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>

</RelativeLayout>