<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:background="@drawable/bg_sheet_dialog_settings"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/bottom_sheet_arrow"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_line"
        app:tint="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/tommy"
            android:text="@string/text_sw_theme"
            android:textColor="@color/colorTextMainGrey"
            android:textSize="18sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:checked="true"
            android:thumb="@drawable/switch_thumb"
            app:track="@drawable/switch_track" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_sw_notifications"
            android:fontFamily="@font/tommy"
            android:textSize="18sp"
            android:textColor="@color/colorTextMainGrey"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:checked="true"
            android:thumb="@drawable/switch_thumb"
            app:track="@drawable/switch_track" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/tommy"
            android:text="@string/text_setting_text_size"
            android:textColor="@color/colorTextMainGrey"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/seekbar_text_size"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:progress="50"
            android:splitTrack="false"
            android:progressDrawable="@drawable/seekbar_style"
            android:thumb="@drawable/seekbar_text_size_thumb" />

    </RelativeLayout>


</LinearLayout>