<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_marginTop="60dp"
    android:background="@drawable/bg_sheet_dialog_content"
    app:behavior_hideable="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/bottom_sheet_arrow"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_up"
            app:tint="@color/colorPrimary" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/sheet_layout_top"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/tips_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:numStars="5"
                        android:progressDrawable="@drawable/rating_bar"
                        android:rating="2.5"
                        android:stepSize="0.01" />


                    <ImageView
                        android:id="@+id/tips_favorite"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_favorite_off" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:background="@color/colorPrimary"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tips_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_test"
                        android:textColor="@color/colorTextMainGrey"
                        android:textSize="24dp"
                        android:maxLines="2"
                        android:fontFamily="@font/tommy"
                        android:textStyle="bold"/>

                    <FrameLayout
                        android:id="@+id/frameBannerAd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>


                    <TextView
                        android:id="@+id/tips_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/content_test"
                        android:textColor="@color/colorTextMainGrey"
                        android:textStyle="bold" />


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_another_tips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_another_tips"
                        android:textColor="@color/colorTextMainGrey"
                        android:textSize="18sp"
                        android:fontFamily="@font/tommy"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/text_view_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/text_view_all"
                        android:textColor="@color/colorOrange"
                        android:textSize="16sp"
                        android:fontFamily="@font/tommy"
                        android:textStyle="normal"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycleViewAnotherTips"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text_another_tips"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        tools:listitem="@layout/card_tips" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>




    </LinearLayout>




</LinearLayout>
