<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".fragment.ProfileFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"/>


    <LinearLayout
        android:id="@+id/layout_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/icon"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/grey"/>

        <TextView
            android:id="@+id/text_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textColor="@color/colorTextMainGrey"
            android:textSize="19sp"
            android:fontFamily="@font/tommy"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_rate"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_below="@+id/layout_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_share"
        android:weightSum="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnRate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_rate"
            android:padding="16dp"
            app:tint="@color/colorPrimary" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"/>

        <ImageView
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_share"
            android:padding="18dp"
            app:tint="@color/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_rate"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/imageSettings"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_settings"
                android:padding="7dp"
                app:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageSettings"
                android:layout_marginStart="20dp"
                android:text="@string/text_settings"
                android:textColor="@color/colorTextMainGrey"
                android:fontFamily="@font/tommy"
                android:textSize="20sp"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_right"
                android:padding="15dp"
                app:tint="@color/colorGreyTwo" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imagePrivacy"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_privacy_policy"
                android:padding="7dp"
                app:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imagePrivacy"
                android:layout_marginStart="20dp"
                android:text="@string/text_privacy_policy"
                android:textColor="@color/colorTextMainGrey"
                android:fontFamily="@font/tommy"
                android:textSize="20sp"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_right"
                android:padding="15dp"
                app:tint="@color/colorGreyTwo" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnTerms"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageTerms"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:padding="8dp"
                android:src="@drawable/ic_terms_conditions"
                app:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageTerms"
                android:layout_marginStart="20dp"
                android:text="@string/text_terms_conditions"
                android:textColor="@color/colorTextMainGrey"
                android:fontFamily="@font/tommy"
                android:textSize="20sp"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_right"
                android:padding="15dp"
                app:tint="@color/colorGreyTwo" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnContactUs"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageContactUs"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_contact_us"
                android:padding="4dp"
                app:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/imageContactUs"
                android:fontFamily="@font/tommy"
                android:text="@string/text_contact_us"
                android:textColor="@color/colorTextMainGrey"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_arrow_right"
                android:padding="15dp"
                app:tint="@color/colorGreyTwo" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>